# quark

./: Cargo.toml  README.md  start_servers.sh
data/db/: db
data/db_8080/: db
data/db_8081/: db
data/db_8082/: db
src/: db.rs  main.rs  server.rs  sharding.rs
