[package]
name = "quark"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "4", features = ["derive"] }
